Added unit tests for Services and Controllers (line coverage 60%)